# forms-ai

./: .env.example  .env.vercel.example  .gitignore  README.md  docker-compose.yml  vercel.json
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: celery_client.py  main.py
apps/api/app/application/use_cases/: authenticate_user.py  refresh_access_token.py  register_user.py
apps/api/app/core/: cache.py  config.py  dependencies.py  encryption.py  lgpd.py  metrics.py  rate_limit.py  security.py  webhooks.py
apps/api/app/domain/entities/: document.py  form.py  (+2 more)
apps/api/app/routers/: checklist.py  documents.py  pdf_download.py
apps/api/tests/unit/: test_cache.py  test_checklist_repository.py  test_document_entity.py  test_encryption.py  test_fallback_regex.py  test_form_repository.py  test_generate_checklist.py  test_groq_client.py  test_lgpd.py  test_security.py  test_tenant_entity.py  test_user_entity.py  test_webhooks.py
apps/worker/: pyproject.toml  requirements.txt
apps/worker/app/: celery_app.py  celery_config.py
apps/worker/app/tasks/: analyze_form.py  cleanup.py  extract_data.py  extract_parties.py  fill_form.py  generate_checklist.py  generate_pdf.py
apps/worker/tests/unit/: test_acroform_filler.py  test_analyze_form_task.py  test_checklist_builder.py  test_documents_router.py  test_extract_data_task.py  test_field_mapper.py  test_generate_checklist_task.py  test_generate_pdf_task.py  test_ocr_pipeline.py  test_overlay_filler.py  test_pdf_reader.py
(+99 files in other folders)
