[tool.poetry]
name = "saas-form-filler-api"
version = "0.1.0"
description = "SaaS Form Filler — Backend FastAPI"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
bcrypt = "^4.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.4.0"
redis = "^5.0.0"
httpx = "^0.27.0"
cryptography = "^43.0.0"
prometheus-client = "^0.21.0"
boto3 = "^1.34.144"
python-multipart = "^0.0.9"
[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
