[tool.poetry]
name = "saas-form-filler-worker"
version = "0.1.0"
description = "SaaS Form Filler — Celery Worker"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
redis = "^5.0.0"
pypdf = "^4.3.0"
pymupdf = "^1.24.0"
paddleocr = "^2.7.0"
paddlepaddle = "^2.6.0"
pillow = "^10.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
boto3 = "^1.34.144"
pydantic = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
